--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -52,70 +52,70 @@
                                 <td>Product</td>
                                 <td><span class="mdi mdi-currency-ngn"></span>30,000</td>
                                 <td>Available</td>
-                                <td><span class="mdi mdi-delete-outline table-icon">&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline table-icon sold"></span></td>
+                                <td><span class="mdi mdi-delete-outline table-icon tooltipped" data-tooltip="Remove Item"></span>&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline sold tooltipped" data-tooltip="Mark as Sold"></span></td>
                             </tr>
                             <tr>
                                 <td>iPhoneX</td>
                                 <td>Product</td>
                                 <td><span class="mdi mdi-currency-ngn"></span>30,000</td>
                                 <td>Available</td>
-                                <td><span class="mdi mdi-delete-outline table-icon">&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline table-icon sold"></span></td>
+                                <td><span class="mdi mdi-delete-outline table-icon tooltipped" data-tooltip="Remove Item"></span>&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline sold tooltipped" data-tooltip="Mark as Sold"></span></td>
                             </tr>
                             <tr>
                                 <td>iPhoneX</td>
                                 <td>Product</td>
                                 <td><span class="mdi mdi-currency-ngn"></span>30,000</td>
                                 <td>Available</td>
-                                <td><span class="mdi mdi-delete-outline table-icon">&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline table-icon sold"></span></td>
+                                <td><span class="mdi mdi-delete-outline table-icon tooltipped" data-tooltip="Remove Item"></span>&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline sold tooltipped" data-tooltip="Mark as Sold"></span></td>
                             </tr>
                             <tr>
                                 <td>iPhoneX</td>
                                 <td>Product</td>
                                 <td><span class="mdi mdi-currency-ngn"></span>30,000</td>
                                 <td>Available</td>
-                                <td><span class="mdi mdi-delete-outline table-icon">&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline table-icon sold"></span></td>
+                                <td><span class="mdi mdi-delete-outline table-icon tooltipped" data-tooltip="Remove Item"></span>&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline sold tooltipped" data-tooltip="Mark as Sold"></span></td>
                             </tr>
                             <tr>
                                 <td>iPhoneX</td>
                                 <td>Product</td>
                                 <td><span class="mdi mdi-currency-ngn"></span>30,000</td>
                                 <td>Available</td>
-                                <td><span class="mdi mdi-delete-outline table-icon">&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline table-icon sold"></span></td>
+                                <td><span class="mdi mdi-delete-outline table-icon tooltipped" data-tooltip="Remove Item"></span>&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline sold tooltipped" data-tooltip="Mark as Sold"></span></td>
                             </tr>
                             <tr>
                                 <td>iPhoneX</td>
                                 <td>Product</td>
                                 <td><span class="mdi mdi-currency-ngn"></span>30,000</td>
                                 <td>Available</td>
-                                <td><span class="mdi mdi-delete-outline table-icon">&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline table-icon sold"></span></td>
+                                <td><span class="mdi mdi-delete-outline table-icon tooltipped" data-tooltip="Remove Item"></span>&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline sold tooltipped" data-tooltip="Mark as Sold"></span></td>
                             </tr>
                             <tr>
                                 <td>iPhoneX</td>
                                 <td>Product</td>
                                 <td><span class="mdi mdi-currency-ngn"></span>30,000</td>
                                 <td>Available</td>
-                                <td><span class="mdi mdi-delete-outline table-icon">&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline table-icon sold"></span></td>
+                                <td><span class="mdi mdi-delete-outline table-icon tooltipped" data-tooltip="Remove Item"></span>&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline sold tooltipped" data-tooltip="Mark as Sold"></span></td>
                             </tr>
                             <tr>
                                 <td>iPhoneX</td>
                                 <td>Product</td>
                                 <td><span class="mdi mdi-currency-ngn"></span>30,000</td>
                                 <td>Available</td>
-                                <td><span class="mdi mdi-delete-outline table-icon">&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline table-icon sold"></span></td>
+                                <td><span class="mdi mdi-delete-outline table-icon tooltipped" data-tooltip="Remove Item"></span>&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline sold tooltipped" data-tooltip="Mark as Sold"></span></td>
                             </tr>
                             <tr>
                                 <td>iPhoneX</td>
                                 <td>Product</td>
                                 <td><span class="mdi mdi-currency-ngn"></span>30,000</td>
                                 <td>Available</td>
-                                <td><span class="mdi mdi-delete-outline table-icon">&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline table-icon sold"></span></td>
+                                <td><span class="mdi mdi-delete-outline table-icon tooltipped" data-tooltip="Remove Item"></span>&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline sold tooltipped" data-tooltip="Mark as Sold"></span></td>
                             </tr>
                             <tr>
                                 <td>iPhoneX</td>
                                 <td>Product</td>
                                 <td><span class="mdi mdi-currency-ngn"></span>30,000</td>
                                 <td>Available</td>
-                                <td><span class="mdi mdi-delete-outline table-icon">&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline table-icon sold"></span></td>
+                                <td><span class="mdi mdi-delete-outline table-icon tooltipped" data-tooltip="Remove Item"></span>&nbsp;&nbsp;&nbsp;<span class="mdi mdi-check-circle-outline sold tooltipped" data-tooltip="Mark as Sold"></span></td>
                             </tr>
                         </tbody>
                     </table>
