--- a/views/partials/loginModal.hbs
+++ b/views/partials/loginModal.hbs
@@ -5,7 +5,7 @@
         <div class="modal-content">
             <h4>Login <i id="modal-close" class="mdi mdi-close modal-close right"></i></h4>
             <form id="loginForm" name="loginForm" novalidate>
-                <div class="row">
+                <div class="row login-row">
                     <div class="col s12 input-field">
                         <i class="mdi mdi-email-outline prefix"></i>
                         <input type="text" name="loginEmail" id="loginEmail" autofocus>
@@ -14,7 +14,7 @@
                         <span class="loginFormErrorMessage" id="loginEmailErrorMessage"></span>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row login-row">
                     <div class="col s12 input-field">
                         <i class="mdi mdi-lock-outline prefix"></i>
                         <input type="password" name="loginPassword" id="loginPassword">
@@ -22,7 +22,7 @@
                         <span class="helper-text" data-error="Please provide your password"></span>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row login-row">
                     <div class="col s12 input-field">
                         <button id="login-button" class="button btn waves-effect waves-light" type="submit">Login</button>
                     </div>
