--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,6 +14,7 @@
 <body>
     {{{body}}}
     <script src="/js/jquery-3.3.1.min.js"></script>
+    <script src="/js/jquery.form.js"></script>
     <script src="/js/materialize.min.js"></script>
     <script src="/js/script.js"></script>
     <script src="/js/{{script}}"></script>
